# rtrq

./: .gitignore  AGENTS.md  INVARIANTS.md  README.md  RTRQ.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_SETUP.md  VALIDATION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  tsconfig.base.json  turbo.json
.codex/: README.md
.codex/scripts/: bootstrap.sh  build.sh  python-lint.sh  python-tests.sh  python-typecheck.sh  run-server.sh  typecheck.sh  validate.sh
apps/dev-app/: README.md  example-server.js  package.json  server.js
apps/dev-app/src/app/: globals.css  layout.tsx  page.tsx
apps/manager/: package.json
apps/rtrq-self-hosted/: .env.example  README.md  eslint.config.mjs  package.json  tsconfig.json  tsup.config.ts
apps/rtrq-self-hosted/src/: index.ts
apps/server/: AGENTS.md  README.md  pyproject.toml
apps/server/src/rtrq_server/: __init__.py  app.py  config.py  models.py
apps/server/tests/: test_config.py  test_invalidation_api.py  test_protocol_fixtures.py
fixtures/protocol/: README.md  http-invalidation.json  topics.json  websocket-messages.json
scripts/: build-python.sh  run-server-dev.sh  setup-python.sh  validate-protocol-fixtures.ts
