[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "rtrq-server"
version = "0.1.0"
description = "FastAPI server for RTRQ."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0"
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "httpx>=0.27.0",
  "pytest>=8.3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/rtrq_server"]
